# R-Industries-Music-Line

./: browser.json  package-lock.json  package.json  requirements.txt  setup_auth.py
api/: cookies.txt  index.py
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/: index.py
app/api/spotify/token/: route.ts
app/auth/callback/: page.tsx
app/login/: page.tsx
app/rewind/: page.tsx
components/: Navbar.tsx
engine/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
utils/: spotify.ts  supabase.ts
